syntax = "proto3";

package xmaslist;

option go_package = "github.com/simmonmt/xmaslist/proto/list_service";

message ListData {
  string name = 1;
  string beneficiary = 2;
  int64 event_date = 3;
}

message ListMetadata {
  int64 created = 1;
  int64 updated = 2;
  int32 owner = 3;
  bool active = 4;
}

message List {
  string id = 1;
  int32 version = 2;

  ListData data = 3;
  ListMetadata metadata = 4;
}
